# pratice_playground

./: .gitignore  README.md  pyproject.toml  requirements.txt
langchain/: agent_with_tools.ipynb  flow_functionalt_api.ipynb  flow_langraph_api.ipynb  simple_agent.ipynb  thinking_langraph.ipynb
nlp/: NLP_NLU_NLG.txt  doc_adapter_abs.py  ingestion_factory.py  main.py  markdown_adapter.py  ocr_img_adapter.py  pdf_adapter.py  rag_config.py  text_adapter.py
