[project]
name = "agents"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "langchain",
    "langchain-openai",
    "langchain-anthropic",
    "langchain-neo4j",
    "langchain-graph-retriever",
    "langchain[openai]",
    "unstructured[all-docs,pdf]>=0.18.21",
    "langchain-text-splitters>=1.1.0",
    "docling>=2.65.0",
    "python-magic-bin>=0.4.14",
    "huggingface-hub[hf-xet]>=0.36.0",
    "opencv-python>=4.11.0.86",
]

[dependency-groups]
dev = [
    "ipykernel>=6.29.5",
]
